--- a/frontend.html
+++ b/frontend.html
@@ -91,6 +91,9 @@
             transition: all 0.3s ease;
         }
 
+        /* --- MODIFICATION HARAHEL --- */
+        
+
         nav.scrolled {
             padding: 1rem 5%;
             background: rgba(255, 255, 255, 0.98);
